<resources>
    <string name="app_name">Tournée de commercial</string>

    <!-- General Keywords -->
    <string name="add">Ajouter</string>
    <string name="delete">Supprimer</string>
    <string name="edit">Modifier</string>
    <string name="save">Enregistrer</string>
    <string name="validate">Valider</string>

    <!-- General Errors -->
    <string name="database_connection_error">Erreur de connexion à la base de données</string>
    <string name="empty_field_error">Veuillez remplir le champ</string>
    <string name="invalid_field_error">Le champ est incorrect car : %s</string>
    <string name="empty_fields_error">Veuillez remplir tous les champs</string>
    <string name="invalid_email_error">Adresse e-mail invalide</string>
    <string name="password_length_error">Le mot de passe doit contenir au moins 8 caractères</string>
    <string name="password_pattern_error">Le mot de passe doit contenir au moins une lettre majuscule, une lettre minuscule, un chiffre et un caractère spécial parmi @#$%^&amp;+=_</string>
    <string name="invalid_login_params_error">Adresse e-mail ou mot de passe incorrect</string>
    <string name="password_confirmation_error">Les mots de passe ne correspondent pas</string>

    <!-- Bottom Navigation Bar -->
    <string name="bottom_bar_clients">Clients</string>
    <string name="bottom_bar_history">Historique</string>
    <string name="bottom_bar_itinerary">Itinéraire</string>
    <string name="bottom_bar_map">Carte</string>
    <string name="bottom_bar_settings">Paramètres</string>

    <!-- User Information -->
    <string name="last_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="email">Adresse e-mail</string>
    <string name="address">Adresse postale</string>
    <string name="postal_code">Code postal</string>
    <string name="city">Ville</string>

    <!-- Account Creation and Login -->
    <string name="password">Mot de passe</string>
    <string name="confirm_password">Resaisir le mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="signup">S\'inscrire</string>

    <!-- Itinerary -->
    <string name="display_distance_km">%d km</string>
    <string name="itinerary_deleted_success">Itinéraire supprimé avec succès</string>
    <string name="itinerary_deletion_error">Erreur lors de la suppression de l\'itinéraire</string>
    <string name="itinerary_name">Nom de l\'itinéraire</string>
    <string name="companies_to_visit">Entreprises à visiter</string>
    <string name="generate">Générer</string>
    <string name="no_clients_error">Aucun client n\'a été saisi</string>

    <!-- Client -->
    <string name="company_address">Adresse de l\'entreprise</string>
    <string name="company_name">Nom de l\'entreprise</string>
    <string name="information">Informations</string>
    <string name="contact">Contact</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="status">Statut</string>
    <string name="prospect">Prospect</string>
    <string name="client">Client</string>
    <string name="fetching_params_error">Nous n\'avons pas pû récupérer vos informations</string>
    <string name="params_update_success">Mise à jour de l\'utilisateur réussie</string>
    <string name="params_update_error">Mise à jour impossible</string>
    <string name="confirm_delete_client">
        Êtes-vous sûr de vouloir supprimer le client \"%s\" ?\n
        Tous les itinéraires contenant ce client seront également supprimés.
    </string>
    <string name="client_deleted_success">Le client a bien été supprimé</string>
    <string name="client_deletion_error">Le client n\'a pas pû être supprimé</string>

    <!-- Action Bar -->
    <string name="create_route">Création d\'un itinéraire</string>
    <string name="search_company">Recherche une entreprise</string>
    <string name="select_client">Sélectionner un client</string>
    <string name="search">Rechercher…</string>

    <string name="delete_client">Suppression du client</string>
    <string name="delete_route">Suppression de l\'itinéraire</string>
    <string name="confirm_delete_route">Êtes vous sûr de vouloir supprimer l\'itinéraire \"%s\" ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="company_description">Description (optionnel)</string>
    <string name="address_search_title">Recherche d\'adresse</string>

    <!-- Switch -->
    <string name="switch_item_client">Client</string>
    <string name="switch_item_prospect">Prospect</string>

    <!-- Toast Error Messages -->
    <string name="default_error_msg">Erreur :</string>
    <string name="fetch_route_error">Erreur : impossible de récupérer l\'itinéraire</string>
    <string name="fetch_clients_count_error">Erreur lors de la récupération du nombre de clients</string>
    <string name="fetch_client_error">Erreur lors de la récupération des clients</string>
    <string name="generate_itinerary_error">Erreur : impossible de générer l\'itinéraire</string>
    <string name="create_itinerary_error">Erreur : impossible de créer l\'itinéraire</string>
    <string name="fetch_itinerary_error">Erreur lors de la récupération des itinéraires</string>
    <string name="fetch_clients_error">Erreur : impossible de récupérer les clients disponibles</string>
    <string name="fetch_course_error">Erreur : impossible de récupérer le parcours</string>


    <!-- Toast Success Messages -->
    <string name="add_client">Ajout d\'un client</string>
    <string name="create_itinerary_success">Itinéraire créé avec succès</string>
    <string name="update_itinerary_success">Itinéraire modifié avec succès</string>
    <string name="sign_up_success">Inscription réussie</string>
    <string name="create_client_success">Client créé avec succès</string>
    <string name="update_client_success">Client modifié avec succès</string>

    <!-- Quit App Dialog -->
    <string name="quit_app">Quitter l\'application</string>
    <string name="confirm_quit_app">Voulez-vous vraiment quitter l\'application ?</string>

    <!-- Settings -->
    <string name="save_params_error">Erreur lors de la sauvegarde des paramètres</string>
    <string name="no_itinerary">Vous n\'avez sélectionné aucun itinéraire</string>
    <string name="clients_search_title">Ajout d\'un client</string>
    <string name="create_client_error">Impossible de créer le client</string>
    <string name="confirm_add_route">Voulez-vous parcourir cet itinéraire : %s ?</string>
    <string name="stay_without_itinerary">Aucun itinéraire sélectionné. Voulez-vous poursuivre sans itinéraire ?</string>

    <string name="no_route_map">Il n\'y a pas d\'itinéraire </string>
    <string name="launch_route">Démarrer le parcours</string>

    <!-- Marker -->
    <string name="start_point">Ma position</string>
    <string name="end_point">Position client</string>

    <!-- Carte -->
    <string name="destination_done">Destination atteinte</string>
    <string name="itinerary_done">Itinéraire terminé !</string>
    <string name="message_destination">Merci d\'avoir utilisé notre service !</string>

    <string name="destination_reached">Vous êtes arrivé !</string>

    <string name="nom_entreprise">Nom de l\'entreprise</string>
    <string name="adresse_entreprise">Adresse de l\'entreprise</string>
    <string name="type">Type : %s</string>
    <string name="type_entreprise_default">Type: type</string>

    <string name="description_map">Carte représentant la position actuelle et la position du prochain client à visiter.</string>

    <string name="visiter">Visiter</string>
    <string name="passer">Passer</string>
    <string name="centrer">Centrer</string>
    <string name="pause">Mettre en pause</string>
    <string name="arreter">Arrêter</string>
    <string name="route_finished">Parcours terminé</string>

    <!-- Connectivity errors -->
    <string name="no_internet_error">Impossible de se connecter à Internet. Veuillez vérifier que vous avez votre WiFi ou vos données mobiles activées.</string>

    <!-- Modify Password -->
    <string name="modify_password">Modifier le mot de passe</string>
    <string name="old_password">Ancien mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="new_password_confirmation">Confirmation du nouveau mot de passe</string>
    <string name="modify_password_error">Impossible de changer le mot de passe</string>

    <!-- Notifications -->
    <string name="prospect_nearby">Prospect(s) à proximité :</string>
    <string name="prospect_nearby_message">Ce(s) prospect(s) sont à proximité :\n%s</string>
    <string name="prospect_nearby_sub_message" formatted="false">\n%s\n%s\n%s\n----------</string>
    <string name="client_notification_message" formatted="false">Vous êtes à moins de 200 mètres du client :\n%s\nNuméro de téléphone: %s</string>
    <string name="time_remaining">Fermeture dans %d secondes.</string>
    <string name="ok">ok\n</string>

    <!-- Launching route from itinerary -->
    <string name="unable_to_launch_route">Un itinéraire est déjà en cours, veuillez le finir avant d\'en lancer un nouveau.</string>
    <string name="confirm_start_route_file_exists">ATTENTION : Un parcours est déjà en cours, si vous acceptez de lancer cette itinéraire alors l\'ancien parcours sera terminé et sauvegardé en l\'état.</string>
    <string name="resumeItinerary">Continuer le trajet</string>

    <!-- Finished itinerary -->
    <string name="title_visits_isClient">Visité ?</string>
    <string name="title_visits_name">Nom du client</string>

    <!-- History -->
    <string name="confirm_delete_parcours">
        Êtes-vous sûr de vouloir supprimer le parcours \"%s\" ?
    </string>
    <string name="parcours_delete_success">Le parcours a bien été supprimé</string>
    <string name="parcours_deletion_error">Le parcours n\'a pas pû être supprimé</string>
    <string name="delete_parcours">Suppression du parcours</string>
    <string name="no_entry">Il n\'y a actuellement aucune entrée</string>

    <!-- URL -->
    <string name="url_validate">Valider cet URL</string>
    <string name="return_to_connect">Retourner à la page de connexion</string>
    <string name="url_server">URL du serveur</string>
    <string name="param_administrateur">Paramètres administrateur</string>
    <string name="invalid_url_config">Le serveur est inaccessible ou l\'URL est incorrecte.</string>
    <string name="invalid_url_error">L\'URL n\'est pas valide</string>
    <string name="invalid_url_error_header">L\'URL doit commencer par http:// ou https://</string>
    <string name="invalid_url_error_trailer">L\'URL doit se terminer par un slash</string>
    <string name="warning_modification_url">ATTENTION : Ceci modifie l\'adresse à laquelle le serveur est situé. Ne modifiez pas si vous n\'êtes pas sûr de ce que vous faites !</string>

</resources>