<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingBottom="@dimen/margin_default">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default">

        <TableRow android:layout_marginBottom="@dimen/space_vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    style="@style/SubPartTitle"/>
        </TableRow>

        <TableRow android:layout_marginBottom="@dimen/space_vertical">

            <EditText
                    android:autofillHints="name"
                    android:id="@+id/editText_businessName"
                    android:layout_width="match_parent"
                    style="@style/RoundedEditText"
                    android:hint="@string/company_name"
                    android:inputType="text"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/domain_24dp_5f6368_fill0_wght400_grad0_opsz24"/>
        </TableRow>

        <TableRow android:layout_marginBottom="@dimen/space_vertical">

            <TextView
                    android:id="@+id/textView_address"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/RoundedEditText"
                    android:hint="@string/address"
                    android:drawableStart="@drawable/location_city"
                    android:drawableEnd="@drawable/baseline_expand_more_24"/>
        </TableRow>


        <TableRow>

            <EditText
                    android:autofillHints=""
                    android:id="@+id/editText_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/RoundedEditTextArea"
                    android:hint="@string/company_description"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:gravity="top"
                    android:layout_weight="1"
                    android:layout_span="2"/>
        </TableRow>

        <View style="@style/Separator"/>

        <TableRow android:layout_marginBottom="@dimen/space_vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    style="@style/SubPartTitle"/>
        </TableRow>

        <TableRow android:layout_marginBottom="@dimen/space_vertical">

            <EditText
                    android:id="@+id/editText_name"
                    android:autofillHints="name"
                    android:layout_width="@dimen/size_zero"
                    android:layout_weight="1"
                    style="@style/RoundedEditText"
                    android:drawableStart="@drawable/person"
                    android:hint="@string/last_name"
                    android:layout_marginEnd="@dimen/space_half_horizontal"
                    android:inputType="text"/>

            <EditText
                    android:id="@+id/editText_firstname"
                    android:autofillHints="name"
                    android:layout_width="@dimen/size_zero"
                    android:layout_weight="1"
                    style="@style/RoundedEditText"
                    android:drawableStart="@drawable/person"
                    android:hint="@string/first_name"
                    android:layout_marginStart="@dimen/space_half_horizontal"
                    android:inputType="text"/>
        </TableRow>

        <TableRow android:layout_marginBottom="@dimen/space_vertical">

            <EditText
                    android:id="@+id/editText_phoneNumber"
                    android:autofillHints="phone"
                    android:layout_width="match_parent"
                    style="@style/RoundedEditText"
                    android:hint="@string/phone_number"
                    android:drawableStart="@drawable/call"
                    android:layout_weight="1"
                    android:maxLength="10"
                    android:inputType="phone"/>
        </TableRow>

        <View style="@style/Separator"/>

        <TableRow android:layout_marginBottom="@dimen/space_vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    style="@style/SubPartTitle"/>
        </TableRow>

        <TableRow android:layout_marginBottom="@dimen/space_vertical">

            <Switch
                    android:id="@+id/switch_status"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_size_edit"
                    android:checked="true"
                    android:text="@string/client"
                    android:textSize="@dimen/text_size_default"/>
        </TableRow>

        <TableRow>

            <Button
                    android:id="@+id/button_save"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:text="@string/save"
                    style="@style/PrimaryButton"/>
        </TableRow>
    </TableLayout>
</ScrollView>