<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_vertical" />

    <EditText
        android:id="@+id/editText_password"
        style="@style/RoundedEditText"
        android:layout_width="match_parent"
        android:autofillHints="emailAddress"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLength="300" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_vertical" />

    <EditText
        android:id="@+id/editText_passwordConfirmation"
        style="@style/RoundedEditText"
        android:layout_width="match_parent"
        android:autofillHints="emailAddress"
        android:hint="@string/new_password_confirmation"
        android:inputType="textPassword"
        android:maxLength="300" />

    <View
        style="@style/Separator"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/button_modify"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_password" />

</LinearLayout>