<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/margin_default"
              android:gravity="center"
              android:orientation="vertical">

    <EditText
            android:id="@+id/editText_name"
            style="@style/RoundedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:maxLength="50"
            android:hint="@string/last_name"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_vertical"/>

    <EditText
            android:id="@+id/editText_firstname"
            style="@style/RoundedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:maxLength="50"
            android:hint="@string/first_name"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_vertical"/>

    <EditText
            android:id="@+id/editText_email"
            style="@style/RoundedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:maxLength="300"
            android:hint="@string/email"/>

    <View
            style="@style/Separator"
            android:layout_width="match_parent"/>

    <Button
            android:id="@+id/button_modify"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>

    <fr.iutrodez.tourneecommercial.utils.FullsizeFetchStatusDisplay
        android:id="@+id/fetchStatus_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>